Set audacious to open video

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -90,7 +90,7 @@ map yn shell -d echo -n %f    | xsel --clipboard -i
 
 map ss  console shell 
 map sn shell -d nemo %d &
-map sr shell -d rgr %d
+# map sr shell -d rgr %d  #doesn't work?
 map st shell thunar &
 map sh shell gnome-terminal &
 map se shell emacsc %f &
