--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -110,6 +110,8 @@ ext php = php -- "$1"
 mime ^audio|ogg$,  has audacious,X, flag f = audacious -- "$@"
 mime ^audio|ogg$,  has audacious,X, flag f = audacious --enqueue -- "$@"
 mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
+mime ^video,  has audacious,X, flag f = audacious -- "$@"
+mime ^video,  has audacious,X, flag f = audacious --enqueue -- "$@"
 mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
 mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
 mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
