--- a/xchainkeys/xchainkeys.conf
+++ b/xchainkeys/xchainkeys.conf
@@ -1,3 +1,6 @@
+## License
+## This software is licensed under the CC0 1.0 Public Domain Dedication, as
+## released by Creative Commons <http://creativecommons.org/publicdomain/zero/1.0/>.
 
 ## THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS",
 ## WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
@@ -24,17 +27,17 @@ C-Return Escape :exec xsendkey Escape && xdotool key Control+Return
 C-Return Mode_switch :exec xdotool key Escape && xdotool key Control+Return
 
 # basic movement
-C-Return h :exec xsendkey Left && xdotool key Control+Return
-C-Return n :exec xsendkey Down && xdotool key Control+Return
-C-Return e :exec xsendkey Up && xdotool key Control+Return
-C-Return i :exec xsendkey Right && xdotool key Control+Return
+C-Return n :exec xsendkey Left && xdotool key Control+Return
+C-Return e :exec xsendkey Down && xdotool key Control+Return
+C-Return i :exec xsendkey Up && xdotool key Control+Return
+C-Return u :exec xsendkey Right && xdotool key Control+Return
 
 # take a count; could add for everything
-C-Return 5 e :exec xsendkey Up && xsendkey Up && xsendkey Up && xsendkey Up && xsendkey Up && xdotool key Control+Return
+# C-Return 5 e :exec xsendkey Up && xsendkey Up && xsendkey Up && xsendkey Up && xsendkey Up && xdotool key Control+Return
 
 # by word
-C-Return w :exec xsendkey Control+Right && xdotool key Control+Return
-C-Return b :exec xsendkey Control+Left && xdotool key Control+Return
+C-Return l :exec xsendkey Control+Right && xdotool key Control+Return
+C-Return y :exec xsendkey Control+Left && xdotool key Control+Return
 
 # gg and G
 C-Return g g :exec xsendkey Control+Home && xdotool key Control+Return
@@ -44,8 +47,8 @@ C-Return S-g :exec xsendkey Control+End && sleep 0.2 && xdotool key Control+Retu
 # keyup on shift with xte stopped working so sleep now; maybe can lower to 0.1
 
 # undo and redo
-C-Return u :exec xsendkey Control+z && xdotool key Control+Return
-C-Return S-u :exec xsendkey Control+y && sleep 0.2 && xdotool key Control+Return
+C-Return p :exec xsendkey Control+z && xdotool key Control+Return
+C-Return C-p :exec xsendkey Control+y && sleep 0.2 && xdotool key Control+Return
 
 # save (this pulls you out)
 C-Return s :exec xsendkey Control+s
