open .gsx via VLC

--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -110,6 +110,7 @@ ext php = php -- "$1"
 mime ^audio|ogg$,  has audacious,X, flag f = audacious -- "$@"
 mime ^audio|ogg$,  has audacious,X, flag f = audacious --enqueue -- "$@"
 mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
+ext gxs, has vlc,      X, flag f = vlc -- "$@"
 mime ^video,  has audacious,X, flag f = audacious -- "$@"
 mime ^video,  has audacious,X, flag f = audacious --enqueue -- "$@"
 mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
