--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -136,6 +136,8 @@ map yu  eval fm.copy(dirarg=dict(up=1), narg=quantifier)
 map V       mark_files all=True toggle=True
 map v       toggle_visual_mode
 
+
+
 #colemak-like mappings - should we undo -> p -> v -> a -> r ?
 # map vv paste
 # map vo paste overwrite=True
@@ -156,3 +158,6 @@ map v       toggle_visual_mode
 # map pv      mark_files all=True val=False
 # map pV      toggle_visual_mode reverse=True
 # map pd uncut
+
+
+copymap ' "
